--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 	border-radius: 10px;
 	padding: 5px 10px;
 	font-size: 30px;
-	background-color: #f7ce6a;
+	background-color: #FFFFFF;
 	outline: none;
 	color: black;
 	text-decoration: none;
