--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 	font-size: 30px;
 	background-color: #FFFFFF;
 	outline: none;
-	color: black;
+	color: white;
 	text-decoration: none;
 }
 
