--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .black {
-	background-color: white;
+	background-color: black;
 	padding: 10px;
 	text-align: center;
 	border-radius: 20px;
